# rust-billion-row-challenge

./: .gitignore  Cargo.toml  README.md  benchmark.sh
data/: 1-row.csv  3-rows-same-station.csv  3-rows.csv  9-rows-duplicate-stations.csv
src/: analyzer.rs  main.rs  parser.rs
src/brc/: mod.rs
src/brc/processing/: mod.rs  parallel_channel.rs  sequential.rs
src/brc/reader/: mmap.rs  mod.rs
src/parser/: chunked.rs  fd_source.rs  memory_mapped.rs  mmap_source.rs  mod.rs  naive.rs  vectorized.rs
src/processor/: mod.rs  noop.rs  parallel_bulk.rs  parallel_rayon.rs  sequential.rs
src/reader/: chunked.rs  memory_mapped.rs  mod.rs
