[package]
name = "rust-billion-row-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# strip = true  # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fast-float = "0.2.0"
memmap = "0.7.0"
