[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# strip = true  # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossbeam-channel = "0.5.11"
dashmap = "5.5.3"
fast-float = "0.2.0"
memchr = "2.7.1"
memmap = "0.7.0"
nohash = "0.2.0"
rayon = "1.8.1"
